Fix WineItemSkeleton jump

--- a/src/WineItemSkeleton.module.scss
+++ b/src/WineItemSkeleton.module.scss
@@ -7,6 +7,7 @@
   border: 1px solid rgb(236, 235, 235);
   margin: 56px auto 0;
   padding: 16px;
+  transition: box-shadow 0.2s ease-in;
 
   @media (max-width: 768px) {
     width: calc(100% - 16px);
@@ -26,9 +27,9 @@
 
     background: linear-gradient(
       90deg,
-      rgba(208, 207, 207, 0.224) 0%,
-      rgba(207, 205, 205, 0.8) 33%,
-      rgba(198, 197, 197, 0.2) 100%
+      rgb(208, 207, 207) 0%,
+      rgb(207, 205, 205) 33%,
+      rgb(198, 197, 197) 100%
     );
     background-size: 200% 100%;
     border-radius: 16px;
