--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+ul {
+  padding: 0;
+}
+ul li {
+  list-style-type: none;
+}
